--- a/src/index.css
+++ b/src/index.css
@@ -1,52 +1,19 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-.arrow {
-  position: relative;
-  width: 50px;
-  height: 50px;
+.arrow{
+  transition-duration:0.125s;
 }
-
-.arrow-left,
-.arrow-right {
-  position: absolute;
-  top: calc(50% - 2px);
-  width: calc(50% - 5px);
-  height: 4px;
-  background-color: black;
-}
-
-.arrow-left {
-  left: 0;
-}
-
-.arrow-right {
-  right: 0;
-}
-
-.arrow-left::before,
-.arrow-right::before {
-    content: "";
-    position:absolute;
-    top:-7px; 
-    width:0; 
-    height:0; 
-    border-style:solid; 
-}
-.arrow-left::before{
-    border-width:7px 10.5px; 
-    border-color:transparent black transparent transparent; 
-}
-.arrow-right::before{
-    border-width:7px; 
-    border-color:black transparent transparent black; 
-}
-
 /* Add these styles to animate the arrows on hover */
 .arrow:hover .arrow-left {
-   transform : translateX(-5px);
+   transform : translateX(-.65rem);
+   transition-duration: 0.125s;
+   font-size: 2.35rem;
+   transition-timing-function: linear;
 }
 .arrow:hover .arrow-right {
-   transform : translateX(5px);
+   transform : translateX(.65rem);
+   transition-duration: 0.125s;
+   font-size: 2.35rem;
+   transition-timing-function: linear;
 }
