--- a/src/AdminPage.module.css
+++ b/src/AdminPage.module.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 input[type="checkbox"] {
   clip: rect(0 0 0 0);
   clip-path: inset(50%);
