--- a/src/index.css
+++ b/src/index.css
@@ -22,10 +22,10 @@
   width: 100vw;
   height: 100vh;
 }
-.experience-canvas {
-  width: 100%;
-  height: 100%;
-}
+/* .experience-canvas {
+  width: 100% !important;
+  height: 100% !important;
+} */
 .loader__wrapper {
   position: fixed;
   top: 50%;
