--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,10 @@
   width: 100vw;
   height: 100vh;
 }
+.experience-canvas {
+  width: 100%;
+  height: 100%;
+}
 /* .experience-canvas {
   width: 100% !important;
   height: 100% !important;
@@ -69,11 +73,16 @@
   display: flex;
   gap: 2rem;
   justify-content: center;
-    width: max-content;
+  width: max-content;
   transform: translate(-50%);
   margin-left: 50%;
   z-index: 1000;
   transition: 750ms cubic-bezier(0.35, 1.49, 0.85, 1.11) bottom;
+}
+@media screen and (min-width: 640px) {
+  .buttons {
+    margin-left: 30%;
+  }
 }
 
 .buttons > * {
